# ADB_Easy_Control

./: LICENSE  README.md  setup.cfg
ADB_Easy_Control/: __init__.py  app_assistant.py  data_model.py  device_assistant.py  key_event.py  screen_and_file.py  touch_event.py  touch_event_withobj.py
ADB_Easy_Control_Package/: __init__.py  app_assistant.py  key_event.py  screen_and_file.py  touch_event.py  touch_event_withobj.py
