[metadata]
name = ADB-Easy-Control
version = 1.0.1
author = Watch_Cats
author_email = watchcats202004@outlook.com
description = A python package that makes it easier to control your android devices with ADB.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/watch-cat/ADB_Easy_Control
project_urls =
    Bug Tracker = https://github.com/watch-cat/ADB_Easy_Control/issues
    Source = https://github.com/watch-cat/ADB_Easy_Control
    Release notes = https://github.com/watch-cat/ADB_Easy_Control/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.4

